github_demos/bug/compiler-master/h100.output
语法

    0 $accept: routines $end

    1 routines: %empty
    2         | routines routine

    3 routine: function
    4        | stmt

    5 stmts: %empty
    6      | stmts stmt

    7 function_header: FUNC IDENTIFIER '(' ')'
    8                | FUNC IDENTIFIER '(' IDENTIFIER ')'
    9                | FUNC IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ')'
   10                | FUNC IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'
   11                | FUNC IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'
   12                | CFUNC IDENTIFIER '(' ')'
   13                | CFUNC IDENTIFIER '(' IDENTIFIER ')'
   14                | CFUNC IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ')'
   15                | CFUNC IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'
   16                | CFUNC IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'

   17 function: function_header '{' stmts '}'

   18 expr: INTEGER
   19     | CHAR
   20     | STRING
   21     | variable
   22     | IDENTIFIER '(' ')'
   23     | IDENTIFIER '(' expr ')'
   24     | IDENTIFIER '(' expr ',' expr ')'
   25     | IDENTIFIER '(' expr ',' expr ',' expr ')'
   26     | IDENTIFIER '(' expr ',' expr ',' expr ',' expr ')'
   27     | expr '+' expr
   28     | expr '-' expr
   29     | expr '*' expr
   30     | expr '/' expr
   31     | expr '%' expr
   32     | expr '<' expr
   33     | expr '>' expr
   34     | expr EQ expr
   35     | expr NE expr
   36     | expr GE expr
   37     | expr LE expr
   38     | '!' expr
   39     | '+' expr
   40     | '-' expr
   41     | expr AND expr
   42     | expr OR expr
   43     | variable '=' expr
   44     | '(' expr ')'
   45     | '&' IDENTIFIER

   46 variable: IDENTIFIER
   47         | IDENTIFIER '[' expr ']'
   48         | IDENTIFIER '[' expr ']' '[' expr ']'
   49         | IDENTIFIER '[' expr ']' '[' expr ']' '[' expr ']'
   50         | '$' expr

   51 if_prefix: IF '(' expr ')'

   52 stmt: ';'
   53     | expr ';'
   54     | error ';'
   55     | '{' stmts '}'
   56     | VAR IDENTIFIER ';'
   57     | VAR IDENTIFIER '=' expr ';'
   58     | VAR IDENTIFIER '[' ']' '=' STRING ';'
   59     | VAR IDENTIFIER '[' INTEGER ']' ';'
   60     | VAR IDENTIFIER '[' INTEGER ']' '[' INTEGER ']' ';'
   61     | VAR IDENTIFIER '[' INTEGER ']' '[' INTEGER ']' '[' INTEGER ']' ';'
   62     | IDENTIFIER '[' expr ETC ']' '=' STRING ';'

   63 @1: %empty

   64 stmt: FOR '(' expr ';' expr ';' expr ')' @1 stmt

   65 $@2: %empty

   66 stmt: WHILE '(' expr ')' $@2 stmt
   67     | if_prefix stmt

   68 @3: %empty

   69 stmt: if_prefix stmt ELSE @3 stmt
   70     | RET expr ';'
   71     | RET ';'
   72     | PRINT expr ';'
   73     | PRINTLN expr ';'
   74     | GET variable ';'
   75     | GETCHAR variable ';'
   76     | GETLINE variable ';'
   77     | CONT ';'
   78     | BREAK ';'
   79     | EXIT ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 38
'$' (36) 50
'%' (37) 31
'&' (38) 45
'(' (40) 7 8 9 10 11 12 13 14 15 16 22 23 24 25 26 44 51 64 66
')' (41) 7 8 9 10 11 12 13 14 15 16 22 23 24 25 26 44 51 64 66
'*' (42) 29
'+' (43) 27 39
',' (44) 9 10 11 14 15 16 24 25 26
'-' (45) 28 40
'/' (47) 30
';' (59) 52 53 54 56 57 58 59 60 61 62 64 70 71 72 73 74 75 76 77 78
    79
'<' (60) 32
'=' (61) 43 57 58 62
'>' (62) 33
'[' (91) 47 48 49 58 59 60 61 62
']' (93) 47 48 49 58 59 60 61 62
'{' (123) 17 55
'}' (125) 17 55
error (256) 54
IDENTIFIER (258) 7 8 9 10 11 12 13 14 15 16 22 23 24 25 26 45 46 47
    48 49 56 57 58 59 60 61 62
STRING (259) 20 58 62
INTEGER (260) 18 59 60 61
CHAR (261) 19
FUNC (262) 7 8 9 10 11
VAR (263) 56 57 58 59 60 61
CFUNC (264) 12 13 14 15 16
PRINT (265) 72
PRINTLN (266) 73
GET (267) 74
GETCHAR (268) 75
GETLINE (269) 76
FOR (270) 64
WHILE (271) 66
IF (272) 51
RET (273) 70 71
BREAK (274) 78
CONT (275) 77
EXIT (276) 79
ETC (277) 62
IFX (278)
ELSE (279) 69
VARDECLARE (280)
OR (281) 42
AND (282) 41
NE (283) 35
EQ (284) 34
GE (285) 36
LE (286) 37
NEG (287)
POS (288)


Nonterminals, with rules where they appear

$accept (53)
    左： 0
routines (54)
    左： 1 2, 右： 0 2
routine (55)
    左： 3 4, 右： 2
stmts (56)
    左： 5 6, 右： 6 17 55
function_header (57)
    左： 7 8 9 10 11 12 13 14 15 16, 右： 17
function (58)
    左： 17, 右： 3
expr (59)
    左： 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45, 右： 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 41 42 43 44 47 48 49 50 51 53 57 62 64
    66 70 72 73
variable (60)
    左： 46 47 48 49 50, 右： 21 43 74 75 76
if_prefix (61)
    左： 51, 右： 67 69
stmt (62)
    左： 52 53 54 55 56 57 58 59 60 61 62 64 66 67 69 70 71 72 73
    74 75 76 77 78 79, 右： 4 6 64 66 67 69
@1 (63)
    左： 63, 右： 64
$@2 (64)
    左： 65, 右： 66
@3 (65)
    左： 68, 右： 69


State 0

    0 $accept: . routines $end

    $default  reduce using rule 1 (routines)

    routines  转到状态 1


State 1

    0 $accept: routines . $end
    2 routines: routines . routine

    $end        shift, and go to state 2
    error       shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    FUNC        shift, and go to state 8
    VAR         shift, and go to state 9
    CFUNC       shift, and go to state 10
    PRINT       shift, and go to state 11
    PRINTLN     shift, and go to state 12
    GET         shift, and go to state 13
    GETCHAR     shift, and go to state 14
    GETLINE     shift, and go to state 15
    FOR         shift, and go to state 16
    WHILE       shift, and go to state 17
    IF          shift, and go to state 18
    RET         shift, and go to state 19
    BREAK       shift, and go to state 20
    CONT        shift, and go to state 21
    EXIT        shift, and go to state 22
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28
    '{'         shift, and go to state 29
    ';'         shift, and go to state 30

    routine          转到状态 31
    function_header  转到状态 32
    function         转到状态 33
    expr             转到状态 34
    variable         转到状态 35
    if_prefix        转到状态 36
    stmt             转到状态 37


State 2

    0 $accept: routines $end .

    $default  接受


State 3

   54 stmt: error . ';'

    ';'  shift, and go to state 38


State 4

   22 expr: IDENTIFIER . '(' ')'
   23     | IDENTIFIER . '(' expr ')'
   24     | IDENTIFIER . '(' expr ',' expr ')'
   25     | IDENTIFIER . '(' expr ',' expr ',' expr ')'
   26     | IDENTIFIER . '(' expr ',' expr ',' expr ',' expr ')'
   46 variable: IDENTIFIER .
   47         | IDENTIFIER . '[' expr ']'
   48         | IDENTIFIER . '[' expr ']' '[' expr ']'
   49         | IDENTIFIER . '[' expr ']' '[' expr ']' '[' expr ']'
   62 stmt: IDENTIFIER . '[' expr ETC ']' '=' STRING ';'

    '('  shift, and go to state 39
    '['  shift, and go to state 40

    $default  reduce using rule 46 (variable)


State 5

   20 expr: STRING .

    $default  reduce using rule 20 (expr)


State 6

   18 expr: INTEGER .

    $default  reduce using rule 18 (expr)


State 7

   19 expr: CHAR .

    $default  reduce using rule 19 (expr)


State 8

    7 function_header: FUNC . IDENTIFIER '(' ')'
    8                | FUNC . IDENTIFIER '(' IDENTIFIER ')'
    9                | FUNC . IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ')'
   10                | FUNC . IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'
   11                | FUNC . IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 41


State 9

   56 stmt: VAR . IDENTIFIER ';'
   57     | VAR . IDENTIFIER '=' expr ';'
   58     | VAR . IDENTIFIER '[' ']' '=' STRING ';'
   59     | VAR . IDENTIFIER '[' INTEGER ']' ';'
   60     | VAR . IDENTIFIER '[' INTEGER ']' '[' INTEGER ']' ';'
   61     | VAR . IDENTIFIER '[' INTEGER ']' '[' INTEGER ']' '[' INTEGER ']' ';'

    IDENTIFIER  shift, and go to state 42


State 10

   12 function_header: CFUNC . IDENTIFIER '(' ')'
   13                | CFUNC . IDENTIFIER '(' IDENTIFIER ')'
   14                | CFUNC . IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ')'
   15                | CFUNC . IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'
   16                | CFUNC . IDENTIFIER '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 43


State 11

   72 stmt: PRINT . expr ';'

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 45
    variable  转到状态 35


State 12

   73 stmt: PRINTLN . expr ';'

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 46
    variable  转到状态 35


State 13

   74 stmt: GET . variable ';'

    IDENTIFIER  shift, and go to state 47
    '$'         shift, and go to state 27

    variable  转到状态 48


State 14

   75 stmt: GETCHAR . variable ';'

    IDENTIFIER  shift, and go to state 47
    '$'         shift, and go to state 27

    variable  转到状态 49


State 15

   76 stmt: GETLINE . variable ';'

    IDENTIFIER  shift, and go to state 47
    '$'         shift, and go to state 27

    variable  转到状态 50


State 16

   64 stmt: FOR . '(' expr ';' expr ';' expr ')' @1 stmt

    '('  shift, and go to state 51


State 17

   66 stmt: WHILE . '(' expr ')' $@2 stmt

    '('  shift, and go to state 52


State 18

   51 if_prefix: IF . '(' expr ')'

    '('  shift, and go to state 53


State 19

   70 stmt: RET . expr ';'
   71     | RET . ';'

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28
    ';'         shift, and go to state 54

    expr      转到状态 55
    variable  转到状态 35


State 20

   78 stmt: BREAK . ';'

    ';'  shift, and go to state 56


State 21

   77 stmt: CONT . ';'

    ';'  shift, and go to state 57


State 22

   79 stmt: EXIT . ';'

    ';'  shift, and go to state 58


State 23

   39 expr: '+' . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 59
    variable  转到状态 35


State 24

   40 expr: '-' . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 60
    variable  转到状态 35


State 25

   38 expr: '!' . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 61
    variable  转到状态 35


State 26

   45 expr: '&' . IDENTIFIER

    IDENTIFIER  shift, and go to state 62


State 27

   50 variable: '$' . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 63
    variable  转到状态 35


State 28

   44 expr: '(' . expr ')'

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 64
    variable  转到状态 35


State 29

   55 stmt: '{' . stmts '}'

    $default  reduce using rule 5 (stmts)

    stmts  转到状态 65


State 30

   52 stmt: ';' .

    $default  reduce using rule 52 (stmt)


State 31

    2 routines: routines routine .

    $default  reduce using rule 2 (routines)


State 32

   17 function: function_header . '{' stmts '}'

    '{'  shift, and go to state 66


State 33

    3 routine: function .

    $default  reduce using rule 3 (routine)


State 34

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   41     | expr . AND expr
   42     | expr . OR expr
   53 stmt: expr . ';'

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    NE   shift, and go to state 69
    EQ   shift, and go to state 70
    GE   shift, and go to state 71
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ';'  shift, and go to state 80


State 35

   21 expr: variable .
   43     | variable . '=' expr

    '='  shift, and go to state 81

    $default  reduce using rule 21 (expr)


State 36

   67 stmt: if_prefix . stmt
   69     | if_prefix . stmt ELSE @3 stmt

    error       shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    VAR         shift, and go to state 9
    PRINT       shift, and go to state 11
    PRINTLN     shift, and go to state 12
    GET         shift, and go to state 13
    GETCHAR     shift, and go to state 14
    GETLINE     shift, and go to state 15
    FOR         shift, and go to state 16
    WHILE       shift, and go to state 17
    IF          shift, and go to state 18
    RET         shift, and go to state 19
    BREAK       shift, and go to state 20
    CONT        shift, and go to state 21
    EXIT        shift, and go to state 22
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28
    '{'         shift, and go to state 29
    ';'         shift, and go to state 30

    expr       转到状态 34
    variable   转到状态 35
    if_prefix  转到状态 36
    stmt       转到状态 82


State 37

    4 routine: stmt .

    $default  reduce using rule 4 (routine)


State 38

   54 stmt: error ';' .

    $default  reduce using rule 54 (stmt)


State 39

   22 expr: IDENTIFIER '(' . ')'
   23     | IDENTIFIER '(' . expr ')'
   24     | IDENTIFIER '(' . expr ',' expr ')'
   25     | IDENTIFIER '(' . expr ',' expr ',' expr ')'
   26     | IDENTIFIER '(' . expr ',' expr ',' expr ',' expr ')'

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28
    ')'         shift, and go to state 83

    expr      转到状态 84
    variable  转到状态 35


State 40

   47 variable: IDENTIFIER '[' . expr ']'
   48         | IDENTIFIER '[' . expr ']' '[' expr ']'
   49         | IDENTIFIER '[' . expr ']' '[' expr ']' '[' expr ']'
   62 stmt: IDENTIFIER '[' . expr ETC ']' '=' STRING ';'

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 85
    variable  转到状态 35


State 41

    7 function_header: FUNC IDENTIFIER . '(' ')'
    8                | FUNC IDENTIFIER . '(' IDENTIFIER ')'
    9                | FUNC IDENTIFIER . '(' IDENTIFIER ',' IDENTIFIER ')'
   10                | FUNC IDENTIFIER . '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'
   11                | FUNC IDENTIFIER . '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'

    '('  shift, and go to state 86


State 42

   56 stmt: VAR IDENTIFIER . ';'
   57     | VAR IDENTIFIER . '=' expr ';'
   58     | VAR IDENTIFIER . '[' ']' '=' STRING ';'
   59     | VAR IDENTIFIER . '[' INTEGER ']' ';'
   60     | VAR IDENTIFIER . '[' INTEGER ']' '[' INTEGER ']' ';'
   61     | VAR IDENTIFIER . '[' INTEGER ']' '[' INTEGER ']' '[' INTEGER ']' ';'

    '='  shift, and go to state 87
    '['  shift, and go to state 88
    ';'  shift, and go to state 89


State 43

   12 function_header: CFUNC IDENTIFIER . '(' ')'
   13                | CFUNC IDENTIFIER . '(' IDENTIFIER ')'
   14                | CFUNC IDENTIFIER . '(' IDENTIFIER ',' IDENTIFIER ')'
   15                | CFUNC IDENTIFIER . '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'
   16                | CFUNC IDENTIFIER . '(' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ',' IDENTIFIER ')'

    '('  shift, and go to state 90


State 44

   22 expr: IDENTIFIER . '(' ')'
   23     | IDENTIFIER . '(' expr ')'
   24     | IDENTIFIER . '(' expr ',' expr ')'
   25     | IDENTIFIER . '(' expr ',' expr ',' expr ')'
   26     | IDENTIFIER . '(' expr ',' expr ',' expr ',' expr ')'
   46 variable: IDENTIFIER .
   47         | IDENTIFIER . '[' expr ']'
   48         | IDENTIFIER . '[' expr ']' '[' expr ']'
   49         | IDENTIFIER . '[' expr ']' '[' expr ']' '[' expr ']'

    '('  shift, and go to state 39
    '['  shift, and go to state 91

    $default  reduce using rule 46 (variable)


State 45

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   41     | expr . AND expr
   42     | expr . OR expr
   72 stmt: PRINT expr . ';'

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    NE   shift, and go to state 69
    EQ   shift, and go to state 70
    GE   shift, and go to state 71
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ';'  shift, and go to state 92


State 46

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   41     | expr . AND expr
   42     | expr . OR expr
   73 stmt: PRINTLN expr . ';'

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    NE   shift, and go to state 69
    EQ   shift, and go to state 70
    GE   shift, and go to state 71
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ';'  shift, and go to state 93


State 47

   46 variable: IDENTIFIER .
   47         | IDENTIFIER . '[' expr ']'
   48         | IDENTIFIER . '[' expr ']' '[' expr ']'
   49         | IDENTIFIER . '[' expr ']' '[' expr ']' '[' expr ']'

    '['  shift, and go to state 91

    $default  reduce using rule 46 (variable)


State 48

   74 stmt: GET variable . ';'

    ';'  shift, and go to state 94


State 49

   75 stmt: GETCHAR variable . ';'

    ';'  shift, and go to state 95


State 50

   76 stmt: GETLINE variable . ';'

    ';'  shift, and go to state 96


State 51

   64 stmt: FOR '(' . expr ';' expr ';' expr ')' @1 stmt

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 97
    variable  转到状态 35


State 52

   66 stmt: WHILE '(' . expr ')' $@2 stmt

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 98
    variable  转到状态 35


State 53

   51 if_prefix: IF '(' . expr ')'

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 99
    variable  转到状态 35


State 54

   71 stmt: RET ';' .

    $default  reduce using rule 71 (stmt)


State 55

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   41     | expr . AND expr
   42     | expr . OR expr
   70 stmt: RET expr . ';'

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    NE   shift, and go to state 69
    EQ   shift, and go to state 70
    GE   shift, and go to state 71
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ';'  shift, and go to state 100


State 56

   78 stmt: BREAK ';' .

    $default  reduce using rule 78 (stmt)


State 57

   77 stmt: CONT ';' .

    $default  reduce using rule 77 (stmt)


State 58

   79 stmt: EXIT ';' .

    $default  reduce using rule 79 (stmt)


State 59

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   39     | '+' expr .
   41     | expr . AND expr
   42     | expr . OR expr

    $default  reduce using rule 39 (expr)


State 60

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   40     | '-' expr .
   41     | expr . AND expr
   42     | expr . OR expr

    $default  reduce using rule 40 (expr)


State 61

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   38     | '!' expr .
   41     | expr . AND expr
   42     | expr . OR expr

    $default  reduce using rule 38 (expr)


State 62

   45 expr: '&' IDENTIFIER .

    $default  reduce using rule 45 (expr)


State 63

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   41     | expr . AND expr
   42     | expr . OR expr
   50 variable: '$' expr .

    $default  reduce using rule 50 (variable)


State 64

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | expr . GE expr
   37     | expr . LE expr
   41     | expr . AND expr
   42     | expr . OR expr
   44     | '(' expr . ')'

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    NE   shift, and go to state 69
    EQ   shift, and go to state 70
    GE   shift, and go to state 71
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ')'  shift, and go to state 101


State 65

    6 stmts: stmts . stmt
   55 stmt: '{' stmts . '}'

    error       shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    VAR         shift, and go to state 9
    PRINT       shift, and go to state 11
    PRINTLN     shift, and go to state 12
    GET         shift, and go to state 13
    GETCHAR     shift, and go to state 14
    GETLINE     shift, and go to state 15
    FOR         shift, and go to state 16
    WHILE       shift, and go to state 17
    IF          shift, and go to state 18
    RET         shift, and go to state 19
    BREAK       shift, and go to state 20
    CONT        shift, and go to state 21
    EXIT        shift, and go to state 22
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28
    '{'         shift, and go to state 29
    '}'         shift, and go to state 102
    ';'         shift, and go to state 30

    expr       转到状态 34
    variable   转到状态 35
    if_prefix  转到状态 36
    stmt       转到状态 103


State 66

   17 function: function_header '{' . stmts '}'

    $default  reduce using rule 5 (stmts)

    stmts  转到状态 104


State 67

   42 expr: expr OR . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 105
    variable  转到状态 35


State 68

   41 expr: expr AND . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 106
    variable  转到状态 35


State 69

   35 expr: expr NE . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 107
    variable  转到状态 35


State 70

   34 expr: expr EQ . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 108
    variable  转到状态 35


State 71

   36 expr: expr GE . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 109
    variable  转到状态 35


State 72

   37 expr: expr LE . expr

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 5
    INTEGER     shift, and go to state 6
    CHAR        shift, and go to state 7
    '+'         shift, and go to state 23
    '-'         shift, and go to state 24
    '!'         shift, and go to state 25
    '&'         shift, and go to state 26
    '$'         shift, and go to state 27
    '('         shift, and go to state 28

    expr      转到状态 110
    variable  转到状态 35


State 73

   32 expr: expr '<' . expr
